--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 
 <div class="login-container">
   <h2>Login</h2>
-  <form action="#">
+  <form action="process_form.php">
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
