--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 
 <div class="login-container">
   <h2>Login</h2>
-  <form action="process_form.php">
+  <form action="#">
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
@@ -22,6 +22,15 @@
     <button type="submit">Login</button>
   </form>
 </div>
+<script>
+		const form = document.getElementById('login-form');
+		form.addEventListener('submit', (e) => {
+			e.preventDefault();
+			const username = document.getElementById('username').value;
+			const password = document.getElementById('password').value;
+			alert(`Username: ${username}, Password: ${password}`);
+		});
+	</script>
 
 </body>
 </html>
